welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: overriding method run in class SimpleBuggle of type ()Unit;
 method run needs `override' modifier
def run() {for (i<-1 to n) {copiercase();avance()}} 
    ^