welcome.lessons.welcome.array.basics.Array1.scala.code
avance()
var n:Int=getY()+1
recule()

def marque() {baisseBrosse();leveBrosse()}

def copiercase() {getCouleurSol();for (1<-1 to n) {gauche();avance();droite();avance();marque()}}

def run() {for (i<-1 to n) {copiercase();avance()}} 
